# tgcli

./: Cargo.toml  README.md
src/app/: buttons.rs  mod.rs  send.rs  sync.rs
src/cmd/: messages.rs
